=================================
Changes for Crate Admin Interface
=================================

Unreleased
==========

 - Added buttons to collapse and expand all schemas in the tables view.

 - The console now expands vertically to show the whole query if its size
   is larger than the standard size of the console.

 - SQL console keywords are now CrateDB specific.

 - Improved formatted results of the `geo_area` datatype to include an external
   link to a visualisation of that geo_area.

 - Keywords in the SQL console are capitalised.

2017/02/15 1.1.1
================

 - Fixed a console results issue that caused the results table not to be 
   displayed after horizontal scrolling.

 - Fixed an issue that caused the admin-ui to load only one plugin.

 - Display warning in the console view when the query result contains
   an unsafe integer.

 - Relocated the help resources section to be underneath the tweet 
   import tutorial.

 - Show loading indicator when `Execute Query ` is in progress.

2017/01/11 1.1.0
================

 - Breaking: Updated the admin-ui build to be compatible with future crate
   versions which will serve the admin-ui from root `/`.

 - Improved console results table, including data type based colorization,
   alternating row colorization, structured object/array formatting, human-readable
   timestamps, Google Maps link on geo-point results & lazy loading on result sets
   larger than 100 rows.

2017/01/11 1.0.4
================

 - Fixed getting started display issue on very wide screens.

2017/01/02 1.0.3
================

 - Added compatibility with future crate versions which will serve
   the admin-ui from `/admin/` instead of `/_plugins/crate-admin/`.

2016/12/12 1.0.2
================

 - Removed pepper widget, support links are now in a Help section along width
   the Get Started tutorial.

 - Changed read notification behaviour so that all items are marked as
   read upon opening the settings.
