@@ -85,13 +85,13 @@
               <div class="notification__item">
                 <div class="notification__status"></div>
                 <div class="notification__content">
-                  <b>{{item.timestamp | date}}</b>
+                  <b>{{item.date | date}}</b>
                   <div ng-bind-html="item.title"></div>
                 </div>
               </div>
             </div>
 
-            <div class="no-notification" ng-show="noNotifications">
+            <div class="no-notification" ng-if="noNotifications">
               <div class="notification__item">
                 <div class="notification__status"></div>
                 <div class="notification__content">
