@@ -4,6 +4,8 @@ Changes for Crate Admin Interface
 
 Unreleased
 ==========
+  
+ - Fixed an issue that caused the notification date to be `null` in safari.
 
  - Added buttons to collapse and expand all schemas in the tables view.
 
